# qubots

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LOCAL_SETUP.md  PHASE3_DOCUMENTATION.md  PYPI_PREPARATION_SUMMARY.md  QUBOTS_FAST_PROTOTYPING_GUIDE.md  RASTION_INTEGRATION.md  README.md  RELEASE.md  WEB_INTERFACE.md  docker-compose.yml  pyproject.toml  requirements.txt  start_local.sh  start_web_dev.sh  start_web_interface.sh  test1.py
.github/workflows/: ci.yml  publish.yml  release.yml
api/: Dockerfile  main.py  requirements.txt
cli_commands/: cli.py
docs/: README.md
docs/guides/: rastion_integration.md
docs/tutorials/: custom_optimizers.md  fantasy_football.md  getting_started.md
examples/: PLAYGROUND_TESTING.md  README.md  complete_vrp_workflow_demo.py  leaderboard_example.py  load_and_test_optimization.py  playground_consistency_test.py  portfolio_demo_with_plots.py  push_to_rastion.py  run_playground_tests.py  streaming_optimization_demo.py  test_audio_optimization.py  test_calendar_rearrangement.py  test_dataset_aware_tsp.py  test_furniture_arrangement.py  test_furniture_simple.py  test_molecular_optimization.py  test_playground_execution.py  test_portfolio_optimization.py  test_school_resource_allocation.py  test_supply_chain_optimization.py  upload_repo_to_rastion.py
examples/audio_optimization_optimizer/: README.md  config.json  qubot.py  requirements.txt
examples/audio_optimization_problem/: README.md  config.json  qubot.py
examples/basic/: enhanced_qubots_demo.py
examples/calendar_rearrangement_optimizer/: README.md  config.json  qubot.py  requirements.txt
examples/calendar_rearrangement_problem/: README.md  config.json  qubot.py
examples/cpsat_optimizer/: qubot.py  qubots.yaml
examples/dataset_aware_tsp_problem/: README.md  config.json  qubot.py
examples/datasets/: knapsack_small.yaml  maxcut_small.yaml  mps_tiny.yaml
examples/furniture_arrangement_optimizer/: README.md  config.json  qubot.py  requirements.txt
examples/furniture_arrangement_problem/: README.md  config.json  qubot.py
examples/genetic_tsp_optimizer/: config.json  qubot.py
examples/genetic_vrp_optimizer/: README.md  config.json  qubot.py
examples/heuristic_supply_chain_optimizer/: README.md  (+3 more)
mcp_tools/: index.js  package-lock.json  package.json
qubots/: __init__.py  auto_optimizer.py  auto_problem.py  cli.py  code_generator.py  config_manager.py  playground_integration.py  quantum_classical_pipeline.py  rastion_client.py  rastion_unified.py  workflow_exporter.py  workflow_tester.py
rastion_cli/: cli.py
rastion_core/: __init__.py  base_optimizer.py
rastion_hub/: auto_optimizer.py  auto_problem.py  base_optimizer.py  base_problem.py  main.py  quantum_classical_pipeline.py  qubit_eff.py  schemas.py  supabase_client.py  vqa_cycle.py  vqa_interface.py  vqa_pipeline.py
tests/: README.md  test_benchmark.py  test_cli_git.py  test_cont_grdesc.py  test_cpsat.py  test_examples_run.py  test_export_trained.py  test_finetune.py  test_full_flow_git.py  test_git_repo.py  test_golden_path.py  test_highs_milp.py  test_hub_service.py  test_hub_service_local.py  test_hub_service_supabase.py  test_imports.py  test_knapsack_sa.py  test_leaderboard.py  test_milp_model.py  test_mps_miplib.py  test_multiple_solvers.py  test_pipeline.py  test_quadratic_gd.py  test_qubo_sa.py  test_resolver.py  test_scaffold.py  test_schema_v2.py  test_security.py  test_validate.py
web_interface/: Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
(+276 files in other folders)
