[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rastion-hub"
version = "0.1.0"
description = "A collaborative platform for the optimization community."
authors = [
    { name = "Ioannis D. Leonidas", email = "gleonidas303@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
keywords = ["optimization", "quantum", "classical", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
dependencies = [
    "typer",
    "requests",
    "python-dotenv"
]

[project.scripts]
rastion = "rastion_cli.cli:main"


[project.urls]
"Source" = "https://github.com/leonidas1312/rastion-hub/tree/main"

[tool.setuptools.packages.find]
where = ["."]
